--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,7 @@
 		<div class="col-md-5">
 			<div class="page-header">
 				<h1>
-					Dashboard <small>Coming Soon</small>
+					DASHBOARD <small>Coming Soon</small>
 				</h1>
 			</div>
 		</div>
@@ -52,9 +52,6 @@
 			</h2>
 			<p>
 				This is where instructions will go
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
 			</p>
 		</div>
 	</div>
