--- a/website/index.html
+++ b/website/index.html
@@ -83,7 +83,7 @@
 						<div class="col-md-7 lineChartContainer">
                             <div id="positivityRate"></div>
 						</div>
-						<div class="col-md-5">
+						<div class="col-md-5 barChartContainer">
 							<div id="genderBreakdown"></div>
 						</div>
 					</div>
