--- a/website/index.html
+++ b/website/index.html
@@ -174,7 +174,7 @@
 	<div class="row">
 		<div class="col-md-12 footer">
 			<p>
-				Bottom footer
+				Dashboard created by Prayag Gordy and Adam Chazan
 			</p>
 		</div>
 	</div>
