--- a/website/index.html
+++ b/website/index.html
@@ -176,11 +176,11 @@
 						</div>
 					</div>
 					<div class="col-md-8 mapContainer">
-						<div class="toggleMap toggleMapVisible" id="countyNewCases"></div>
-						<div class="toggleMap" id="countyTotalCases"></div>
-						<div class="toggleMap" id="zipNewCases"></div>
-						<div class="toggleMap" id="zipTotalCases"></div>
-						<div class="toggleMap" id="countyTesting"></div>
+						<div class="toggleMap toggleMapVisible" id="countyNewCases">Title</div>
+						<div class="toggleMap" id="countyTotalCases">Title</div>
+						<div class="toggleMap" id="zipNewCases">Title</div>
+						<div class="toggleMap" id="zipTotalCases">Title</div>
+						<div class="toggleMap" id="countyTesting">Title</div>
 						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset. </p></div>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyNewCases')"> New cases by county</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTotalCases')"> Total cases by county</button>
