--- a/website/index.html
+++ b/website/index.html
@@ -206,13 +206,13 @@
 				</h3>
 			</div>
 		</div>
-	<!--<div class="row">
+	<div class="row">
 		<div class="col-md-12 footer">
 			<p>
 				Dashboard created by Prayag Gordy and Adam Chazan <br>
 				Data from ____
 			</p>
 		</div>
-	</div>-->
+	</div>
 </div>
 </body>
