--- a/website/index.html
+++ b/website/index.html
@@ -201,18 +201,17 @@
 				</div>
 			</div>
 			<div class="col-md-3 dataTable">
-				<h3>
-					Data Table
-				</h3>
+				<div class="subhead">Data Table</div>
+				<iframe src="Data-Table.html" width="100%" height="95%" style="border:none;"></iframe>
 			</div>
 		</div>
 	<div class="row">
-		<div class="col-md-12 footer">
+		<footer class="col-md-12 footer">
 			<p>
 				Dashboard created by Prayag Gordy and Adam Chazan <br>
 				Data from ____
 			</p>
-		</div>
+		</footer>
 	</div>
 </div>
 </body>
