style data table

--- a/website/index.html
+++ b/website/index.html
@@ -201,8 +201,7 @@
 				</div>
 			</div>
 			<div class="col-md-3 dataTable">
-				<div class="subhead">Data Table</div>
-				<iframe src="Data-Table.html" width="100%" height="95%" style="border:none;"></iframe>
+				<iframe class="tableEmbed" src="Data-Table.html" width="100%" height="100%" style="border: none; margin: none;"></iframe>
 			</div>
 		</div>
 	<div class="row">
