--- a/website/index.html
+++ b/website/index.html
@@ -183,7 +183,7 @@
 						<div class="toggleLine" id="newCases"></div>
 						<div class="toggleLine" id="newDeaths"></div>
 						<div class="toggleLine" id="positivityRate"></div>
-						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset. </p></div>
+						<div class="instructions">Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset.</div>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('hospitalizations')"> Hospitalizations</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('newCases')"> New cases</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('newDeaths')"> New deaths</button>
@@ -193,7 +193,7 @@
 						<div class="toggleBar toggleBarVisible" id="raceBreakdown"></div>
 						<div class="toggleBar" id="ageBreakdown"></div>
 						<div class="toggleBar" id="genderBreakdown"></div>
-						<div class="instructions"><p>Hover over bars to display values. </p></div>
+						<div class="instructions">Hover over bars to display values.</div>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleBar('raceBreakdown')"> Cases by race</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleBar('ageBreakdown')"> Cases by age</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleBar('genderBreakdown')"> Cases by sex</button>
@@ -201,7 +201,8 @@
 				</div>
 			</div>
 			<div class="col-md-3 dataTable">
-				<iframe class="tableEmbed" src="Data-Table.html" width="100%" height="100%" style="border: none; margin: none;"></iframe>
+				<iframe class="tableEmbed" src="Data-Table.html" width="100%" height="97%" style="border: none; margin: none; padding: none;"></iframe>
+				<div class="instructions"><p>Some Blurb can go here. Maybe this is where the attribution of the data source is or some methodology.</p></div>
 			</div>
 		</div>
 	<div class="row">
