--- a/website/index.html
+++ b/website/index.html
@@ -169,7 +169,7 @@
 						<div class="toggleMap" id="zipNewCases"></div>
 						<div class="toggleMap" id="zipTotalCases"></div>
 						<div class="toggleMap" id="countyTesting"></div>
-						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset. </p></div>
+						<div class="instructions"><p>Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset.</p></div>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyNewCases')"> New cases by county</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('countyTotalCases')"> Total cases by county</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleMap('zipNewCases')"> New cases by zip</button>
@@ -183,7 +183,7 @@
 						<div class="toggleLine" id="newCases"></div>
 						<div class="toggleLine" id="newDeaths"></div>
 						<div class="toggleLine" id="positivityRate"></div>
-						<div class="instructions">Use the scroll wheel to zoom. Click to snap to county or zip code. Click outside map to reset.</div>
+						<div class="instructions"><p>Instructions</p></div>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('hospitalizations')"> Hospitalizations</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('newCases')"> New cases</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleLine('newDeaths')"> New deaths</button>
@@ -193,7 +193,7 @@
 						<div class="toggleBar toggleBarVisible" id="raceBreakdown"></div>
 						<div class="toggleBar" id="ageBreakdown"></div>
 						<div class="toggleBar" id="genderBreakdown"></div>
-						<div class="instructions">Hover over bars to display values.</div>
+						<div class="instructions"><p>Hover over bars to display values.</p></div>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleBar('raceBreakdown')"> Cases by race</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleBar('ageBreakdown')"> Cases by age</button>
 						<button type="button" class="btn btn-outline-secondary btn-sm" onclick="toggleBar('genderBreakdown')"> Cases by sex</button>
@@ -209,7 +209,7 @@
 		<footer class="col-md-12 footer">
 			<p>
 				Dashboard created by Prayag Gordy and Adam Chazan <br>
-				Data from ____
+				Contact us at:
 			</p>
 		</footer>
 	</div>
