--- a/website/index.html
+++ b/website/index.html
@@ -117,49 +117,43 @@
 						<div class="row">
 							<div class="col-md-6 card">
 								<div class="subhead">Confirmed Cases</div>
-								<div class="descBig">Total</div>
-								<h5>0</h5>
+								<div class="num">0</div>
 								<div class="descBig">Daily Change</div>
-								<h5>+0</h5>
+								<div class="changeNum">+0</div>
 							</div>
 							<div class="col-md-6 card">
 								<div class="subhead">Confirmed Deaths</div>
-								<div class="descBig">Total</div>
-								<h5>0</h5>
+								<div class="num">0</div>
 								<div class="descBig">Daily Change</div>
-								<h5>+0</h5>
+								<div class="changeNum">+0</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 card">
-								<div class="subhead">Hospitalizations</div>
-								<div class="descBig">Now Hospitalized</div>
-								<h5>0</h5>
+								<div class="subhead">Hospitalized</div>
+								<div class="num">0</div>
 								<div class="descBig">Daily Change</div>
-								<h5>+0</h5>
+								<div class="changeNum">+0</div>
 							</div>
 							<div class="col-md-6 card">
 								<div class="subhead">Testing Volume</div>
-								<div class="descBig">Total Tests</div>
-								<h5>0</h5>
+								<div class="num">10,000</div>
 								<div class="descBig">Daily Change</div>
-								<h5>+0</h5>
+								<div class="changeNum">+0</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 card">
 								<div class="subhead">Positivity Rate</div>
-								<div class="descBig">% Positive</div>
-								<h5>0</h5>
+								<div class="num">40%</div>
 								<div class="descBig">Daily Change</div>
-								<h5>+0</h5>
+								<div class="changeNum">+0</div>
 							</div>
 							<div class="col-md-6 card">
 								<div class="subhead">Negative Tests</div>
-								<div class="descBig">Total Tests</div>
-								<h5>0</h5>
+								<div class="num">0</div>
 								<div class="descBig">Daily Change</div>
-								<h5>+0</h5>
+								<div class="changeNum">+0</div>
 							</div>
 						</div>
 					</div>
