--- a/website/index.html
+++ b/website/index.html
@@ -117,43 +117,43 @@
 						<div class="row">
 							<div class="col-md-6 card">
 								<div class="subhead">Confirmed Cases</div>
-								<div class="num">0</div>
+								<div class="cardNum">83,054</div>
 								<div class="descBig">Daily Change</div>
-								<div class="changeNum">+0</div>
+								<div class="changeNum">+1,288</div>
 							</div>
 							<div class="col-md-6 card">
 								<div class="subhead">Confirmed Deaths</div>
-								<div class="num">0</div>
+								<div class="cardNum">3,304</div>
 								<div class="descBig">Daily Change</div>
-								<div class="changeNum">+0</div>
+								<div class="changeNum">+11</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 card">
 								<div class="subhead">Hospitalized</div>
-								<div class="num">0</div>
+								<div class="cardNum">545</div>
 								<div class="descBig">Daily Change</div>
-								<div class="changeNum">+0</div>
+								<div class="changeNum">+12</div>
 							</div>
 							<div class="col-md-6 card">
 								<div class="subhead">Testing Volume</div>
-								<div class="num">10,000</div>
+								<div class="cardNum">1,075,316</div>
 								<div class="descBig">Daily Change</div>
-								<div class="changeNum">+0</div>
+								<div class="changeNum">+34,874</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 card">
 								<div class="subhead">Positivity Rate</div>
-								<div class="num">40%</div>
+								<div class="cardNum">4.48%</div>
 								<div class="descBig">Daily Change</div>
-								<div class="changeNum">+0</div>
+								<div class="changeNum">-0.21</div>
 							</div>
 							<div class="col-md-6 card">
 								<div class="subhead">Negative Tests</div>
-								<div class="num">0</div>
+								<div class="cardNum">742,272</div>
 								<div class="descBig">Daily Change</div>
-								<div class="changeNum">+0</div>
+								<div class="changeNum">+19,688</div>
 							</div>
 						</div>
 					</div>
